ISPN-10544 Remove dependencies on java.beans module to make Infinispan slender
* replace java.beans.IntrospectionException with ReflectiveOperationException
* do not use java.beans.PropertyEditor to convert strings to common types